--- a/Верстка/CSS/main.css
+++ b/Верстка/CSS/main.css
@@ -192,7 +192,7 @@ input{
 	margin-bottom: 30px;
 }
 
-input: first-of-type{
+input first-of-type{
 	margin-right: 25px;
 }
 h2{
@@ -226,7 +226,7 @@ input[type=text]:focus, input[type=password]:focus {
 
 input[type=submit] {
   background-color: #fed136;
-  color: black
+  color: black;
   border-radius:6px;
   padding: 16px 20px;
   margin: 8px;
@@ -243,7 +243,7 @@ input[type=submit]:hover {
 }
 
 table{
-	vertical-align: center;
+	margin: auto;
 }
 
 /*tbody{
